--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,88 +1,161 @@
 ---
 import Header from "../components/Header.astro";
+import Project from "../components/Project.astro";
 import Layout from "../layouts/Layout.astro";
 import { Icon } from "astro-icon";
+
+export const projects = [
+  {
+    name: "Streaks",
+    description: "Yet another habit tracking app.",
+    status: "In development",
+    logo: "streaks-white.svg",
+    show: true,
+  },
+  {
+    name: "Dash Cam Platform",
+    description: "A platform for dash cam videos.",
+    status: "TBA",
+    logo: "dashcam.svg",
+    show: false,
+  },
+  {
+    name: "Rate My Portfolio",
+    description: "A platform for rating portfolios.",
+    status: "TBA",
+    logo: "portfolio.svg",
+    show: false,
+  },
+  {
+    name: "Rolochef",
+    description: "A recipe sharing app for chefs.",
+    status: "TBA",
+    logo: "rolochef.svg",
+    show: false,
+  },
+  {
+    name: "Micab",
+    description: "A ride-hailing app for taxis in the Philippines.",
+    status: "Legacy",
+    logo: "micab-logo.jpeg",
+    tech: [
+      "logos:nodejs-icon",
+      "logos:express",
+      "logos:react",
+      "logos:redux",
+      "logos:mongodb",
+      "logos:redis",
+      "logos:elasticsearch",
+      "logos:kibana",
+      "logos:nginx",
+      "logos:docker-icon",
+      "logos:aws",
+      "logos:digital-ocean",
+      "logos:google-cloud",
+      "logos:google-maps",
+    ],
+    show: true,
+  },
+  {
+    name: "Micargo",
+    description: "Last mile delivery app for logistics in the Philippines.",
+    status: "Legacy",
+    logo: "micargo-logo.svg",
+    show: true,
+  },
+];
 ---
 
 <Layout title="Michael Eduave—Software Engineer">
-  <main>
+  <main class="container mx-auto p-4 text-white h-screen">
     <Header />
-    <div class="container mx-auto">
-      <div class="flex flex-col max-h-screen py-10">
-        <div class="flex flex-col gap-5">
-          <span class="text-9xl">Software Engineer</span>
-          <p>
-            Hey there! I'm <span class="text-gradient">Michael Eduave</span> and
-            this is my personal website.
-          </p>
-          <p>
-            I'm currently working on it, so please bear with me. In the
-            meantime, you can check my links below.
-          </p>
-          <div class="flex gap-4">
-            <a
-              class="flex"
-              href="https://www.github.com/michaeljohneduave"
-              target="_blank"
-            >
-              <Icon name="mdi:github" class="h-6" />
-              <span class="text-xl">Github</span>
-            </a>
-            <a
-              class="flex"
-              href="https://www.linkedin.com/in/meduave"
-              target="_blank"
-            >
-              <Icon name="mdi:linkedin" class="h-6" />
-              <span class="text-xl">Linkedin</span>
-            </a>
-          </div>
+    <div class="flex flex-col py-10 h-full gap-y-10">
+      <div class="flex flex-col gap-5">
+        <span class="text-9xl">Software Engineer</span>
+        <p>
+          Hey there! I'm <span class="text-gradient">Michael Eduave</span> and this
+          is my personal website.
+        </p>
+        <p>
+          I'm currently working on it, so please bear with me. In the meantime,
+          you can check my links below.
+        </p>
+        <div class="flex gap-4">
+          <a
+            class="flex"
+            href="https://www.github.com/michaeljohneduave"
+            target="_blank"
+          >
+            <Icon name="mdi:github" class="h-6" />
+            <span class="text-xl">Github</span>
+          </a>
+          <a
+            class="flex"
+            href="https://www.linkedin.com/in/meduave"
+            target="_blank"
+          >
+            <Icon name="mdi:linkedin" class="h-6" />
+            <span class="text-xl">Linkedin</span>
+          </a>
+          <a
+            class="flex"
+            href="https://leetcode.com/michaeljohneduave/"
+            target="_blank"
+          >
+            <Icon name="simple-icons:leetcode" class="h-6" />
+            <span class="text-xl">Leetcode 🫠</span>
+          </a>
         </div>
-        <div class="text-sm mt-auto self-center">
-          Built with <a href="https://astro.build" target="_blank">Astro</a> and
-          <a href="https://tailwindcss.com" target="_blank">Tailwind CSS</a>.
-        </div>
+      </div>
+      <div class="flex flex-wrap">
+        {
+          projects
+            .filter((p) => p.show)
+            .map((project) => {
+              return (
+                <div class="w-2/6">
+                  <Project {...project} />
+                </div>
+              );
+            })
+        }
+      </div>
+      <div class="mt-auto self-center">
+        Built with <a href="https://astro.build" target="_blank">Astro</a> and
+        <a href="https://tailwindcss.com" target="_blank">Tailwind CSS</a>.
       </div>
     </div>
   </main>
-</Layout>
 
-<style>
-  main {
-    margin: auto;
-    padding: 1rem;
-    max-width: calc(100% - 2rem);
-    color: white;
-    font-size: 20px;
-    line-height: 1.6;
-  }
-  .astro-a {
-    position: absolute;
-    top: -32px;
-    left: 50%;
-    transform: translatex(-50%);
-    width: 220px;
-    height: auto;
-    z-index: -1;
-  }
-  h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    margin-bottom: 1em;
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
-  .link-card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 2rem;
-    padding: 0;
-  }
-</style>
+  <style>
+    .astro-a {
+      position: absolute;
+      top: -32px;
+      left: 50%;
+      transform: translatex(-50%);
+      width: 220px;
+      height: auto;
+      z-index: -1;
+    }
+    h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      line-height: 1;
+      text-align: center;
+      margin-bottom: 1em;
+    }
+    .text-gradient {
+      background-image: var(--accent-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-size: 400%;
+      background-position: 0%;
+    }
+    .link-card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+      gap: 2rem;
+      padding: 0;
+    }
+  </style>
+</Layout>
