--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,6 +80,7 @@ export const projects = [
           I'm currently working on it, so please bear with me. In the meantime,
           you can check my links below.
         </p>
+        <div class="text-4xl">Links:</div>
         <div class="flex gap-4">
           <a
             class="flex"
@@ -107,6 +108,7 @@ export const projects = [
           </a>
         </div>
       </div>
+      <div class="text-4xl">Projects:</div>
       <div class="flex flex-wrap">
         {
           projects
