--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,17 @@
+---
+import { Image } from "astro:assets";
+import profileImage from "../../public/profile-pic.jpg";
+---
+
 <div class="flex items-center text-2xl">
-  <img class="h-20 w-20 object-cover rounded-full" src="profile-pic.jpg" />
+  <Image
+    src={profileImage}
+    alt="Michael Eduave"
+    class="h-20 w-20 object-cover rounded-full"
+  />
   <div class="ml-5">Michael Eduave</div>
   <div class="flex gap-5 ml-auto">
-    <div>About</div>
-    <div>Work</div>
+    <!-- <div>About</div>
+    <div>Work</div> -->
   </div>
 </div>
