Add onlyfans page (LOL) Add specter talent as work (might remove it later) Use use generated cookies to detemine unique visitors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,22 @@
 ---
 import Header from "../components/Header.astro";
+import Links from "../components/Links.astro";
 import Project from "../components/ProjectCard.astro";
 import Layout from "../layouts/Layout.astro";
-import { Icon } from "astro-icon";
-
+import { randomStr } from "../utils/random";
 export const projects = [
   {
     name: "Streaks",
     description: "Yet another habit tracking app.",
     status: "In development",
     logo: "streaks-white.svg",
+    show: true,
+  },
+  {
+    name: "Specter Talent",
+    description: "Weekly index for the best talent in the startup world.",
+    status: "Legacy",
+    logo: "talent-logo.svg",
     show: true,
   },
   {
@@ -64,68 +71,48 @@ export const projects = [
     show: true,
   },
 ];
+
+const cookie = randomStr(500);
+
+if (!Astro.cookies.get("astro")) {
+  Astro.cookies.set("astro", cookie, {
+    httpOnly: true,
+  });
+}
 ---
 
 <Layout title="Michael Eduave—Software Engineer">
-  <main class="container mx-auto p-4 text-white h-screen">
-    <Header />
-    <div class="flex flex-col py-10 h-full gap-y-10">
-      <div class="flex flex-col gap-5">
-        <span class="text-9xl">Software Engineer</span>
-        <p>
-          Hey there! I'm <span class="text-gradient">Michael Eduave</span> and
-          this is my personal website.
-        </p>
-        <p>
-          I'm currently working on it, so please bear with me. In the meantime,
-          you can check my links below.
-        </p>
-        <div class="text-4xl">Links:</div>
-        <div class="flex gap-4">
-          <a
-            class="flex"
-            href="https://www.github.com/michaeljohneduave"
-            target="_blank"
-          >
-            <Icon name="mdi:github" class="h-6" />
-            <span class="text-xl">Github</span>
-          </a>
-          <a
-            class="flex"
-            href="https://www.linkedin.com/in/meduave"
-            target="_blank"
-          >
-            <Icon name="mdi:linkedin" class="h-6" />
-            <span class="text-xl">Linkedin</span>
-          </a>
-          <a
-            class="flex"
-            href="https://leetcode.com/michaeljohneduave/"
-            target="_blank"
-          >
-            <Icon name="simple-icons:leetcode" class="h-6" />
-            <span class="text-xl">Leetcode 🫠</span>
-          </a>
-        </div>
-      </div>
-      <div class="text-4xl">Work:</div>
-      <div class="flex flex-wrap">
-        {
-          projects
-            .filter((p) => p.show)
-            .map((project) => {
-              return (
-                <div class="w-2/6">
-                  <Project {...project} />
-                </div>
-              );
-            })
-        }
-      </div>
-      <div class="mt-auto self-center">
-        Built with <a href="https://astro.build" target="_blank">Astro</a> and
-        <a href="https://tailwindcss.com" target="_blank">Tailwind CSS</a>.
-      </div>
+  <Header />
+  <div class="flex flex-col py-10 h-full gap-y-10">
+    <div class="flex flex-col gap-5">
+      <span class="text-9xl">Software Engineer</span>
+      <p>
+        Hey there! I'm <span class="text-gradient">Michael Eduave</span> and
+        this is my personal website.
+      </p>
+      <p>
+        I'm currently working on it, so please bear with me. In the meantime,
+        you can check my links below.
+      </p>
+      <Links />
     </div>
-  </main>
+    <div class="text-4xl">Work:</div>
+    <div class="flex flex-wrap">
+      {
+        projects
+          .filter((p) => p.show)
+          .map((project) => {
+            return (
+              <div class="w-2/6">
+                <Project {...project} />
+              </div>
+            );
+          })
+      }
+    </div>
+    <div class="mt-auto self-center">
+      Built with <a href="https://astro.build" target="_blank">Astro</a> and
+      <a href="https://tailwindcss.com" target="_blank">Tailwind CSS</a>.
+    </div>
+  </div>
 </Layout>
