--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <main class="container mx-auto p-4 text-white h-screen">
+      <slot />
+    </main>
   </body>
 
   <style is:global>
