Remove extra redis op

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -2,9 +2,7 @@
 const { name, description, status, logo } = Astro.props;
 ---
 
-<div
-  class="p-4 hover:cursor-pointer hover:bg-white hover:bg-opacity-5 rounded-md"
->
+<div class="p-4 hover:bg-white hover:bg-opacity-5 rounded-md">
   <div>
     <img class="border-0 h-20 w-20 object-cover" src={logo} alt={name} />
   </div>
