--- a/src/pages/onlyfans.astro
+++ b/src/pages/onlyfans.astro
@@ -1,15 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Redis } from "@upstash/redis";
+import { createClient } from "@vercel/kv";
 
-const redis = new Redis({
-  url: "https://generous-moose-35451.upstash.io",
-  token: import.meta.env.REDIS_TOKEN,
+const kv = createClient({
+  url: import.meta.env.KV_REST_API_URL,
+  token: import.meta.env.KV_REST_API_TOKEN,
 });
+
 const cookies = Astro.cookies.get("astro");
 const [, count] = await Promise.all([
-  redis.sadd("visitors", cookies),
-  redis.scard("visitors"),
+  kv.sadd("visitors", cookies),
+  kv.scard("visitors"),
 ]);
 export const prerender = false;
 ---
