Add clsx package Minor changes to image and logo assets

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -28,7 +28,13 @@ import ofIcon from "../../public/ofIcon.svg";
     <span class="text-xl">Leetcode</span>
   </a>
   <a class="flex" href="/onlyfans">
-    <Image src={ofIcon} alt="onlyfans" class="h-6" />
+    <img
+      src={ofIcon.src}
+      alt="onlyfans"
+      height={24}
+      class="h-6"
+      loading="lazy"
+    />
     <span class="text-xl">Onlyfans 🙀</span>
   </a>
 </div>
