--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ export const projects = [
     name: "Micab",
     description: "A ride-hailing platform for taxis in the Philippines.",
     status: "Legacy",
-    logo: "micab-logo.jpeg",
+    logo: "micab.png",
     tech: [
       "logos:nodejs-icon",
       "logos:express",
