--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,8 @@ import profileImage from "../../public/profile-pic.jpg";
   <Image
     src={profileImage}
     alt="Michael Eduave"
+    width={320}
+    height={320}
     class="h-20 w-20 object-cover rounded-full"
   />
   <div class="ml-5">Michael Eduave</div>
