Pass initial count to ofcount component

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -1,6 +1,5 @@
 ---
 import { Icon } from "astro-icon";
-import { Image } from "astro:assets";
 
 import ofIcon from "../../public/ofIcon.svg";
 ---
@@ -32,7 +31,7 @@ import ofIcon from "../../public/ofIcon.svg";
       src={ofIcon.src}
       alt="onlyfans"
       height={24}
-      class="h-6"
+      width={24}
       loading="lazy"
     />
     <span class="text-xl">Onlyfans 🙀</span>
