Add some responsiveness

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -4,8 +4,7 @@ import { Icon } from "astro-icon";
 import ofIcon from "../../public/ofIcon.svg";
 ---
 
-<div class="text-4xl">Links:</div>
-<div class="flex gap-4">
+<div class="flex flex-wrap gap-4">
   <a
     class="flex"
     href="https://www.github.com/michaeljohneduave"
@@ -24,7 +23,7 @@ import ofIcon from "../../public/ofIcon.svg";
     target="_blank"
   >
     <Icon name="simple-icons:leetcode" class="h-6" />
-    <span class="text-xl">Leetcode</span>
+    <span class="text-xl">Leetcode 🫠</span>
   </a>
   <a class="flex" href="/onlyfans">
     <img
