--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -3,7 +3,9 @@ import { clsx } from "clsx";
 const { name, description, status, logo } = Astro.props;
 ---
 
-<div class="p-4 hover:bg-white hover:bg-opacity-5 rounded-md">
+<div
+  class="py-4 px-1 sm:p-4 sm:hover:bg-white sm:hover:bg-opacity-5 rounded-md"
+>
   <div>
     <img
       class="border-0 object-cover"
