Update leetcode profile link

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -17,11 +17,7 @@ import ofIcon from "../../public/ofIcon.svg";
     <Icon name="mdi:linkedin" class="h-6" />
     <span class="text-xl">Linkedin</span>
   </a>
-  <a
-    class="flex"
-    href="https://leetcode.com/michaeljohneduave/"
-    target="_blank"
-  >
+  <a class="flex" href="https://leetcode.com/mikedcheck" target="_blank">
     <Icon name="simple-icons:leetcode" class="h-6" />
     <span class="text-xl">Leetcode 🫠</span>
   </a>
