--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import profileImage from "../../public/profile-pic.jpg";
 ---
 
-<div class="flex items-center text-2xl">
+<a href="/" class="flex items-center text-2xl">
   <Image
     src={profileImage}
     alt="Michael Eduave"
@@ -12,8 +12,4 @@ import profileImage from "../../public/profile-pic.jpg";
     class="h-20 w-20 object-cover rounded-full"
   />
   <div class="ml-5">Michael Eduave</div>
-  <div class="flex gap-5 ml-auto">
-    <!-- <div>About</div>
-    <div>Work</div> -->
-  </div>
-</div>
+</a>
