--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 interface Props {
   title: string;
 }
@@ -15,25 +16,18 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <script>
-      window.va =
-        window.va ||
-        function () {
-          (window.vaq = window.vaq || []).push(arguments);
-        };
-    </script>
+    <ViewTransitions />
     <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body>
     <main class="container mx-auto p-4 text-white h-screen">
       <slot />
     </main>
+    <style is:global>
+      html {
+        font-family: system-ui, sans-serif;
+        background: #13151a;
+      }
+    </style>
   </body>
-
-  <style is:global>
-    html {
-      font-family: system-ui, sans-serif;
-      background: #13151a;
-    }
-  </style>
 </html>
