--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import profileImage from "../../public/profile-pic.jpg";
 ---
 
-<a href="/" class="flex items-center text-2xl">
+<div class="flex items-center text-2xl">
   <Image
     src={profileImage}
     alt="Michael Eduave"
@@ -12,4 +12,4 @@ import profileImage from "../../public/profile-pic.jpg";
     class="h-20 w-20 object-cover rounded-full"
   />
   <div class="ml-5">Michael Eduave</div>
-</a>
+</div>
