--- a/src/components/Header2.astro
+++ b/src/components/Header2.astro
@@ -1,3 +1,3 @@
-<a href="/" class="flex items-center text-2xl">
-  <div class="my-6 px-20 mx-5">Home</div>
-</a>
+<div class="flex text-center items-center text-2xl">
+  <a href="/" class="w-full md:w-auto my-6"> Home</a>
+</div>
