--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -38,8 +38,8 @@ export const prerender = true;
       <span>{data?.name}</span>
     </p>
     <p>{data?.fullDescription || data?.description}</p>
-    <div class="flex gap-x-2">
-      <div class="w-full md:w-1/2">
+    <div class="flex flex-wrap gap-5">
+      <div class="w-full md:w-1/3">
         {
           data?.screenshot && (
             <div>
