Remove prerender export

--- a/src/pages/onlyfans.astro
+++ b/src/pages/onlyfans.astro
@@ -16,7 +16,7 @@ import OFCount from "../components/OFCount.tsx";
 // });
 // const { result: data } = await res.json();
 
-export const prerender = false;
+// export const prerender = false;
 ---
 
 <Layout title="Michael's OnlyFans">
