Add resume link

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -21,6 +21,14 @@ import ofIcon from "../../public/ofIcon.svg";
     <Icon name="simple-icons:leetcode" class="h-6" />
     <span class="text-xl">Leetcode 🫠</span>
   </a>
+  <a
+    class="flex"
+    href="https://docs.google.com/document/d/1-_UxjmX1hs-f2wTtZK1d6LnzRyjwNrEzFegVd0Vkf1A"
+    target="_blank"
+  >
+    <Icon name="mdi:resume" class="h-6" />
+    <span class="text-xl">Resume</span>
+  </a>
   <a class="flex" href="/onlyfans">
     <img
       src={ofIcon.src}
