--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,9 @@ import Footer from "../components/Footer.astro";
 export const prerender = true;
 ---
 
+<script>
+  fetch("/onlyfans");
+</script>
 <Layout title="Michael Eduave—Software Engineer">
   <Header />
   <div class="flex flex-col py-10 h-full gap-y-2">
