--- a/src/pages/onlyfans.astro
+++ b/src/pages/onlyfans.astro
@@ -1,14 +1,22 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import OFCount from "../components/OFCount.tsx";
 import { randomStr } from "../utils/random";
 
-if (!Astro.cookies.get("astro")) {
-  Astro.cookies.set("astro", randomStr(200), {
+let cookie = Astro.cookies.get("astro")?.value;
+
+if (!cookie) {
+  cookie = randomStr(200);
+  Astro.cookies.set("astro", cookie, {
     maxAge: 60 * 60 * 24 * 365,
     expires: new Date(+new Date() + 60 * 60 * 24 * 365 * 1000),
   });
 }
+
+await fetch(import.meta.env.KV_REST_API_URL + "/sadd/visitors/" + cookie, {
+  headers: {
+    Authorization: "Bearer " + import.meta.env.KV_REST_API_TOKEN,
+  },
+});
 
 const res = await fetch(import.meta.env.KV_REST_API_URL + "/scard/visitors", {
   headers: {
@@ -16,14 +24,12 @@ const res = await fetch(import.meta.env.KV_REST_API_URL + "/scard/visitors", {
   },
 });
 const { result: data } = await res.json();
-
-export const prerender = false;
 ---
 
 <Layout title="Michael's OnlyFans">
   <main class="container text-white">
     <div class="text-xl text-center">
-      <OFCount client:only="react" initCount={data} />
+      <span class="text-4xl">{data}</span>
       <p>people have been here looking for my OnlyFans page.😸</p>
     </div>
   </main>
