Prevent OF counter increment on home visit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ export const prerender = true;
 ---
 
 <script>
-  fetch("/onlyfans");
+  fetch("/onlyfans?t=true");
 </script>
 <Layout title="Michael Eduave—Software Engineer">
   <Header />
