Add gbf project and some minor changes

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,14 +1,16 @@
 ---
 export const skills = [
   "Typescript",
-  "React",
+  "ReactJS",
   "NodeJS",
   "PostgreSQL",
+  "DynamoDB",
   "GraphQL",
   "Docker",
-  "Kubernetes",
+  "SST",
   "AWS",
   "Google APIs",
+  "SolidJS",
 ];
 ---
 
