--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -6,15 +6,15 @@ export const projects = projectMetadata;
 ---
 
 <div class="text-4xl text-slate-300">Work:</div>
-<div class="flex flex-wrap">
+<div class="grid md:grid-cols-3 grid-cols-2">
   {
     projects
       .filter((p) => p.show)
       .map(({ name, status, slug, logo, description }) => {
         return (
-          <div class="w-full sm:w-2/6">
+          <div class="w-full">
             <a href={`/projects/${slug}`}>
-              <div class="py-4 px-1 sm:p-4 sm:hover:bg-white sm:hover:bg-opacity-5 rounded-md">
+              <div class="h-full min-h-full py-4 px-1 sm:p-4 sm:hover:bg-white sm:hover:bg-opacity-5 rounded-md">
                 <div>
                   <Image
                     class="border-0 object-cover"
@@ -33,7 +33,7 @@ export const projects = projectMetadata;
                   <span
                     class={clsx(
                       status === "Legacy" && "text-slate-300",
-                      status === "In development" && "text-green-300",
+                      status === "In Development" && "text-green-300"
                     )}
                   >
                     {status}
