--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,18 +12,21 @@ export const prerender = true;
 <script>
   fetch("/onlyfans?t=true");
 </script>
-<Layout title="Michael Eduave—Software Engineer">
+<Layout
+  title="Michael Eduave—Software Engineer"
+  description="Hey there! I'm Michael and welcome to my website."
+>
   <Header />
   <div class="flex flex-col py-10 h-full gap-y-2">
     <div class="flex flex-col gap-2 sm:gap-5">
       <span class="text-4xl sm:text-7xl lg:text-8xl">Software Engineer</span>
       <p>
-        Hey there! I'm <span class="text-gradient">Michael Eduave</span> and
-        this is my personal website.
+        Hey there! I'm <span class="text-gradient">Michael</span> and this is my
+        website.
       </p>
       <p>
-        I'm currently working on it, so please bear with me. In the meantime,
-        you can check my links below.
+        The website is WIP, so please bear with me. In the meantime, you can
+        check my links below.
       </p>
       <div class="text-4xl text-slate-300">Links:</div>
       <Links />
