--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -14,7 +14,9 @@ export const skills = [
 ];
 ---
 
-<div class="text-4xl text-slate-300">Technical Skills and Tools:</div>
-<div class="flex flex-wrap gap-1">
-  {skills.map((s) => <span class="rounded-lg bg-slate-800 p-2">{s}</span>)}
+<div class="hidden">
+  <div class="text-4xl text-slate-300">Technical Skills and Tools:</div>
+  <div class="flex flex-wrap gap-1">
+    {skills.map((s) => <span class="rounded-lg bg-slate-800 p-2">{s}</span>)}
+  </div>
 </div>
