--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,18 +12,11 @@ export const prerender = true;
 <script>
   fetch("/onlyfans?t=true");
 </script>
-<Layout
-  title="Michael Eduave—Software Engineer"
-  description="Hey there! I'm Michael and welcome to my website."
->
+<Layout title="Michael Eduave—Software Engineer">
   <Header />
   <div class="flex flex-col py-10 h-full gap-y-5">
     <div class="flex flex-col gap-2 sm:gap-5">
       <span class="text-4xl sm:text-7xl lg:text-8xl">Software Engineer</span>
-      <p>
-        Hey there! I'm <span class="text-gradient">Michael</span> and this is my
-        website.
-      </p>
       <Links />
     </div>
     <Projects />
