--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,12 @@ import profileImage from "../../public/profile-pic.jpg";
   <Image
     src={profileImage}
     alt="Michael Eduave"
-    width={320}
-    height={320}
-    class="h-20 w-20 object-cover rounded-full"
+    class="h-40 w-40 object-cover rounded-full"
   />
-  <div class="ml-5">Michael Eduave</div>
+  <div class="ml-5 flex flex-col">
+    <span class="text-5xl">Michael Eduave</span>
+    <span class="text-base"
+      >Software Engineer | Full Snack Developer | Proompt Ingenieur 🤪</span
+    >
+  </div>
 </div>
