--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -2,44 +2,54 @@
 import { Icon } from "astro-icon";
 
 import ofIcon from "../../public/ofIcon.svg";
+
+const links = [
+  {
+    name: "Github",
+    icon: "mdi:github",
+    url: "https://www.github.com/michaeljohneduave",
+  },
+  {
+    name: "Linkedin",
+    icon: "mdi:linkedin",
+    url: "https://www.linkedin.com/in/meduave",
+  },
+  {
+    name: "Leetcode 💀",
+    icon: "simple-icons:leetcode",
+    url: "https://leetcode.com/mikedcheck",
+  },
+  {
+    name: "Resume",
+    icon: "mdi:resume",
+    url: "https://docs.google.com/document/d/1KUjv6__xJ_CHDxpjC4kvi_BAw-xbYL9C",
+  },
+  {
+    name: "Onlyfans 💦",
+    img: ofIcon.src,
+    url: "/onlyfans",
+  },
+];
 ---
 
 <div>
-  <div class="text-4xl text-slate-300">Links:</div>
-  <div class="flex flex-wrap gap-4">
-    <a
-      class="flex"
-      href="https://www.github.com/michaeljohneduave"
-      target="_blank"
-    >
-      <Icon name="mdi:github" class="h-6" />
-      <span class="text-xl">Github</span>
-    </a>
-    <a class="flex" href="https://www.linkedin.com/in/meduave" target="_blank">
-      <Icon name="mdi:linkedin" class="h-6" />
-      <span class="text-xl">Linkedin</span>
-    </a>
-    <a class="flex" href="https://leetcode.com/mikedcheck" target="_blank">
-      <Icon name="simple-icons:leetcode" class="h-6" />
-      <span class="text-xl">Leetcode 🫠</span>
-    </a>
-    <a
-      class="flex"
-      href="https://docs.google.com/document/d/1KUjv6__xJ_CHDxpjC4kvi_BAw-xbYL9C"
-      target="_blank"
-    >
-      <Icon name="mdi:resume" class="h-6" />
-      <span class="text-xl">Resume</span>
-    </a>
-    <a class="flex" href="/onlyfans">
-      <img
-        src={ofIcon.src}
-        alt="onlyfans"
-        height={24}
-        width={24}
-        loading="lazy"
-      />
-      <span class="text-xl">Onlyfans 🙀</span>
-    </a>
+  <div class="flex flex-wrap gap-4 px-4">
+    {
+      links.map((link) => (
+        <a href={link.url} class="flex gap-1" target="_blank">
+          {link.icon ? (
+            <Icon name={link.icon} class="h-6" />
+          ) : (
+            <img
+              src={link.img}
+              alt={link.name}
+              class="w-6 h-6"
+              loading="lazy"
+            />
+          )}
+          <span class="text-xl">{link.name}</span>
+        </a>
+      ))
+    }
   </div>
 </div>
