--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body>
-    <main class="container mx-auto p-4 text-white h-screen">
+    <main class="container flex mx-auto p-4 text-white h-screen">
       <slot />
     </main>
     <style is:global>
