--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,15 +2,17 @@
 import { ViewTransitions } from "astro:transitions";
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
@@ -19,8 +21,10 @@ const { title } = Astro.props;
     <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body>
-    <main class="container flex mx-auto p-4 text-white h-screen">
-      <slot />
+    <main class="container mx-auto p-4 text-white h-screen flex">
+      <div class="flex flex-col grow">
+        <slot />
+      </div>
     </main>
     <style is:global>
       html {
