Minor UI changes in project page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,14 +12,15 @@ export const prerender = true;
 <script>
   fetch("/onlyfans?t=true");
 </script>
-<Layout title="Michael Eduave—Software Engineer">
-  <div class="flex flex-col">
-    <Header />
-    <div class="flex flex-col pt-10 gap-y-5 grow">
-      <Links />
-      <Projects />
-      <!-- <Skills /> -->
-      <Footer />
-    </div>
+<Layout
+  title="Michael Eduave"
+  description="Software Engineer | Full Snack Developer | Proompt Ingenieur 🤪"
+>
+  <Header />
+  <div class="flex flex-col pt-10 gap-y-5 grow">
+    <Links />
+    <Projects />
+    <!-- <Skills /> -->
+    <Footer />
   </div>
 </Layout>
