--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -13,38 +13,38 @@ export const projects = projectMetadata;
         .map(({ name, status, slug, logo, description }) => {
           return (
             <div class="w-full">
-              <a href={`/projects/${slug}`}>
-                <div class="h-full min-h-full py-4 px-1 sm:p-4 sm:hover:bg-white sm:hover:bg-opacity-5 rounded-md">
-                  <div>
-                    {logo ? (
-                      <Image
-                        class="border-0 object-cover"
-                        height={80}
-                        width={80}
-                        src={logo}
-                        alt={name}
-                      />
-                    ) : (
-                      <div class="h-20 w-20" />
-                    )}
-                  </div>
-                  <div class="text-3xl">
-                    <span>{name}</span>
-                  </div>
-                  <p>{description}</p>
-                  <span>
-                    Status:{" "}
-                    <span
-                      class={clsx(
-                        status === "Legacy" && "text-slate-300",
-                        status === "In Development" && "text-green-300"
-                      )}
-                    >
-                      {status}
-                    </span>
-                  </span>
+              {/* <a href={`/projects/${slug}`}> */}
+              <div class="h-full min-h-full py-4 px-1 sm:p-4 sm:hover:bg-white sm:hover:bg-opacity-5 rounded-md">
+                <div>
+                  {logo ? (
+                    <Image
+                      class="border-0 object-cover"
+                      height={80}
+                      width={80}
+                      src={logo}
+                      alt={name}
+                    />
+                  ) : (
+                    <div class="h-20 w-20" />
+                  )}
                 </div>
-              </a>
+                <div class="text-3xl">
+                  <span>{name}</span>
+                </div>
+                <p>{description}</p>
+                <span>
+                  Status:{" "}
+                  <span
+                    class={clsx(
+                      status === "Legacy" && "text-slate-300",
+                      status === "In Development" && "text-green-300"
+                    )}
+                  >
+                    {status}
+                  </span>
+                </span>
+              </div>
+              {/* </a> */}
             </div>
           );
         })
