Add hugin-bot pet project

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -25,6 +25,11 @@ const links = [
     url: "https://docs.google.com/document/d/1KUjv6__xJ_CHDxpjC4kvi_BAw-xbYL9C",
   },
   {
+    name: "Email",
+    icon: "mdi:email",
+    url: "mailto:hey@meduave.com",
+  },
+  {
     name: "Onlyfans 💦",
     img: ofIcon.src,
     url: "/onlyfans",
