Add short intro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,14 @@ export const prerender = true;
   description="Software Engineer | Full Snack Developer | Proompt Ingenieur 🤪"
 >
   <Header />
-  <div class="flex flex-col pt-10 gap-y-5 grow">
+  <div class="flex flex-col pt-5 gap-y-5 grow">
+    <p>
+      Hi, I'm Michael, and I'm passionate about writing high-quality code. I
+      believe in continuous improvement (1.01<sup>365</sup>) , always seeking
+      new knowledge and better ways to implement it. I'm driven by the
+      opportunity to work on and build products that make a positive impact on
+      people and the world.
+    </p>
     <Links />
     <Projects />
     <!-- <Skills /> -->
